# Facer_Id

./: README.md
API-FACE-DETEC/: ReconocimientoFacial.py  capturandoRostros.py  entrenandoRF.py  main.py  pyproject.toml
