[tool.poetry]
name = "api-face-detec"
version = "0.1.0"
description = ""
authors = ["DylanMR08 <dylanmejiaruiz8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
imutils = "^0.5.4"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"
fastapi = {extras = ["all"], version = "^0.111.0"}
pytz = "^2024.1"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
